--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "quarentena-de-esperanca",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Um repositório de iniciativas incríveis para passar a quarentena",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Renan de Andrade <r.andrade@cad.ifma.edu.br>",
   "dependencies": {
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-offline": "^3.1.4",
     "gatsby-plugin-react-helmet": "^3.2.4",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-sitemap": "^2.3.6",
     "gatsby-source-filesystem": "^2.2.4",
     "gatsby-transformer-sharp": "^2.4.6",
     "prop-types": "^15.7.2",
